--- a/htdocs/content/themes/mapache-master/default.hbs
+++ b/htdocs/content/themes/mapache-master/default.hbs
@@ -18,6 +18,7 @@
 
 	{{!-- Styles'n'Scripts --}}
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.css"}}" />
+	<link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:300,400,500" rel="stylesheet">
 
 	{{! Ghost outputs important style and meta data with this tag }}
@@ -41,5 +42,6 @@
 
 	{{!-- The main JavaScript file for Mapache --}}
 	<script src="{{asset "js/bundle.min.js"}}"></script>
+	<script src="{{asset "js/prism.js"}}"></script>
 </body>
 </html>
