--- a/htdocs/content/themes/mapache-master/default.hbs
+++ b/htdocs/content/themes/mapache-master/default.hbs
@@ -18,7 +18,7 @@
 
 	{{!-- Styles'n'Scripts --}}
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.css"}}" />
-	<link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}" />
+	<link rel="stylesheet" type="text/css" href="{{asset "css/themes/prism.css"}}" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:300,400,500" rel="stylesheet">
 
 	{{! Ghost outputs important style and meta data with this tag }}
