--- a/htdocs/content/themes/mapache-master/default.hbs
+++ b/htdocs/content/themes/mapache-master/default.hbs
@@ -17,9 +17,9 @@
 	<link rel="icon" sizes="192x192" href="{{asset "img/icon.png"}}" />
 
 	{{!-- Styles'n'Scripts --}}
-	<link rel="stylesheet" type="text/css" href="{{asset "css/themes/prism.css"}}" />
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.css"}}" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:300,400,500" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}" />
 
 	{{! Ghost outputs important style and meta data with this tag }}
 	{{ghost_head}}
