--- a/htdocs/content/themes/mapache-master/default.hbs
+++ b/htdocs/content/themes/mapache-master/default.hbs
@@ -19,7 +19,7 @@
 	{{!-- Styles'n'Scripts --}}
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.css"}}" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:300,400,500" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}" />
+	<link rel="stylesheet" type="text/css" href="{{asset "/css/prism.css"}}" />
 
 	{{! Ghost outputs important style and meta data with this tag }}
 	{{ghost_head}}
@@ -41,7 +41,7 @@
 	<a href="#" class="scroll_top u-h-b-lg i-arrow_upward"></a>
 
 	{{!-- The main JavaScript file for Mapache --}}
-	<script src="{{asset "js/bundle.min.js"}}"></script>
+	<!-- <script src="{{asset "js/bundle.min.js"}}"></script> -->
 	<script src="{{asset "js/prism.js"}}"></script>
 </body>
 </html>
